Bug 413065 - Untranslatable file dialog filter "Playlists"
Summary: Untranslatable file dialog filter "Playlists"
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-16 23:07 UTC by Alexander Potashev
Modified: 2021-03-21 19:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-10-16 23:07:00 UTC
SUMMARY
Untranslatable file dialog filter "Playlists" in MediaFiles::savePlaylistDialog():

  QStringLiteral("Playlists (*") + playlistExtension + QStringLiteral(")")

Please use i18n().

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Michael Pyne 2021-03-21 19:16:47 UTC
Git commit 14731917babaa45afca49c24965401354066212b by Michael Pyne.
Committed on 21/03/2021 at 18:33.
Pushed by mpyne into branch 'master'.

mediafiles: Make Playlist Save As file type message translatable.

Sorry for missing this for so long. :(
FIXED-IN:21.04

M  +1    -1    mediafiles.cpp

https://invent.kde.org/multimedia/juk/commit/14731917babaa45afca49c24965401354066212b