mediafiles: Make Playlist Save As file type message translatable.

Sorry for missing this for so long. :(

BUG:413065
FIXED-IN:21.04